form completed wiht appwrite

--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  
   "name": "vite-project",
   "private": true,
   "version": "0.0.0",
@@ -15,6 +14,9 @@
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.16.1",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "appwrite": "^15.0.0",
+    "dotenv": "^16.4.5",
+    "formik": "^2.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
